@@ -21,6 +21,8 @@ unburden-home-dir (0.3.2) UNRELEASED; urgency=low
   * Sync man page with --help output and recognized options.
   * Add sxiv, Google Earth and CCache to example unburden-home-dir.list
   * New (optional) make target "cover" to make easy use of Devel::Cover.
+  * debian/rules: Remove notice that the initial example file has no
+    copyright restrictions, i.e. that the notice is allowed to be removed.
 
  -- Axel Beckert <abe@debian.org>  Thu, 11 Oct 2012 21:23:31 +0200
 
